# DEFS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PATENTS.md  README.md
.github/workflows/: ci.yml
defs-cli/: Cargo.toml
defs-core/: Cargo.toml
defs-core/benches/: store_bench.rs
defs-core/src/: alloc_bitmap.rs  btree.rs  compress.rs  decay.rs  dedup.rs  embed.rs  format.rs  hnsw.rs  inode.rs  journal.rs  lib.rs  model.rs  persist.rs  prefetch.rs  snapshot.rs  store.rs  stress_tests.rs  super_block.rs  vfs.rs  volume.rs
defs-fuse/: Cargo.toml
defs-fuse/src/: main.rs
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PATENTS.md
engine/: ARCHITECTURE.md  Cargo.toml
engine/defs-cli/src/: main.rs
engine/defs-core/: Cargo.toml
engine/defs-core/src/: backend.rs  btree.rs  decay.rs  dedup.rs  embed.rs  fsck.rs  hnsw.rs  intelligence.rs  journal.rs  lib.rs  model.rs  particle.rs  persist.rs  prefetch.rs  store.rs  text.rs  vfs.rs  wal.rs
engine/defs-dashboard/: Cargo.toml
engine/defs-dashboard/src/: main.rs
engine/defs-dashboard/static/: app.js  index.html  style.css
engine/defs-fuse/: Cargo.toml
website/: index.html
