[package]
name = "defs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DEFS command-line interface — manage particles, gravity bonds, and volumes"

[dependencies]
defs-core = { path = "../defs-core", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
