[workspace]
members = [
    "defs-core",
    "defs-fuse",
    "defs-cli",
    "defs-dashboard",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["Venkat Yarlagadda", "Taylor Oclaw"]
license = "MIT OR Apache-2.0"
description = "DEFS — Data-Enriched File System"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

