[package]
name = "defs-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DEFS web dashboard — real-time filesystem visualization"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
defs-core = { path = "../defs-core", features = ["std"] }

[features]
default = []
